# Lie_Symmetry_Analysis_Agorithm

./: .coverage  .gitignore  Agrupaciones shido.ipynb  README.md  pyproject.toml  requirements.txt  requirements2.txt  reuirements.txt  setup.cfg  setup.py
Mathematica/: IntroToSymmetry.m  IntroToSymmetry.nb
Notebooks/: Agrupaciones shido.ipynb  Class_experiments.ipynb  Infinitesimals as new classes.ipynb  LieSymmetryAnalysis_Test.ipynb  Point_Symmetries_Example_Runs.ipynb  Vague.ipynb  functions_draft.ipynb
Notebooks/Analysis/: Lie_Symmetry_Analysis.py
Notebooks/class_and_objects/: variables.py
Notebooks/ideal_mhd/: idel_mhd.ipynb
Notebooks/testing/: LieSymmetryAnalysis_Test.ipynb  functions_draft.ipynb  variables.ipynb
Notebooks/utils/: algebra.py  combinatorics.py  symbolic.py
Untitled Folder/: LieSymmetryAnalysis_Test.ipynb
app/service/: lie_symmetry_analysis.py
app/src/: determining_equations.py  latex.py  matrix_form.py  model.py  system_of_equations.py
app/utils/: DEint.py  algebra.py  combinatorics.py  symbolic.py
data_test/data_algebra/: data_compare_derivatives.json  data_drop_constants.json  data_is_zero.json  data_key_ordering.json
data_test/data_latex/: data_dict_to_latex.json
requirements/: dev.in  requirements.txt
src/Lie_Symmetry_Analysis_Algorithm.egg-info/: PKG-INFO  SOURCES.txt
src/Lie_Symmetry_Analysis_Algorithm/analysis/: lie_symmetry_analysis.py
src/Lie_Symmetry_Analysis_Algorithm/utils/: algebra.py  combinatorics.py  latex.py  (+1 more)
src/symmetries.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_alebra_operations.py
tests/test_service/: test_lie_symmetry_analysis.py
tests/test_utils/: test_alebra_operations.py
utils/: DEint.py  combinatorics.py  latex.py
(+28 files in other folders)
