[metadata]
name  = Lie_Symmetry_Analysis_Algorithm
description = Lie symmetry Analysis Algorithm
long_description = file: README.md
license = Proprietary
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir = 
    =src
install_requirements = 
    pytest
    pandas
    numpy

include_package_data = True

[options.packages.find]
where = src
include = Lie_Symmetry_Analysis_Algorithm