[metadata]
name  = symmetries
description = Lie symmetry analysis algorithm
long_description = file: README.md
license = Proprietary
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir = 
    =src
install_requirements = 
    pytest
    pandas
    numpy

include_package_data = True

[options.packages.find]
where = src
include = symmetries